Message, Comments, Media components

--- a/src/app/back/admin/partials/header/header.component.html
+++ b/src/app/back/admin/partials/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="mat-toolbar" fxLayout.lg="row" fxLayout.lt-md="column" fxLayoutAlign="start center" [ngStyle]="{'min-height': '80px'}">
+<div class="mat-toolbar" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign="start center" [ngStyle]="{'min-height': '80px'}">
 	<div class="brand" fxLayout="row" fxLayoutAlign="center center">
 		<a [routerLink]="" class="logo" [ngStyle]="{'text-decoration': 'none'}">
 			<img src="assets/img/EMHHighQuality.svg" width="180" alt="">
