--- a/src/styles.scss
+++ b/src/styles.scss
@@ -252,7 +252,7 @@ app-left-sidenav, app-menu-mega, admin-leftnav {
 	}
 }
 
-.cdk-overlay-pane {
+/*.cdk-overlay-pane {
 	.mat-menu-panel {
 		top: 80px;
 		position: fixed;
@@ -288,4 +288,4 @@ app-left-sidenav, app-menu-mega, admin-leftnav {
 			}
 		}
 	}	
-}
+}*/
