--- a/src/app/back/admin/pages/products/tabs/attribute/attribute.component.html
+++ b/src/app/back/admin/pages/products/tabs/attribute/attribute.component.html
@@ -2,25 +2,25 @@
 	<md-table [dataSource]="dataSource">
 		<ng-container mdColumnDef="attribute">
 			<md-header-cell *mdHeaderCellDef> Attribute </md-header-cell>
-			<md-cell *mdCellDef="let element">
-				<md-form-field *ngIf="!element.isLast">
-					<input mdInput placeholder="Attribute">
-				</md-form-field>
+			<md-cell *mdCellDef="let element; let i = index">
+				<input *ngIf="!element.last" class="form-control" [(ngModel)]="attributeList[i].attribute" placeholder="Attribute">
 			</md-cell>
 		</ng-container>
 		<ng-container mdColumnDef="text">
 			<md-header-cell *mdHeaderCellDef> Text </md-header-cell>
-			<md-cell *mdCellDef="let element">
-				<md-form-field *ngIf="!element.isLast">
-					<textarea mdInput placeholder="Text"></textarea>
-				</md-form-field>
+			<md-cell *mdCellDef="let element; let i = index">
+				<textarea *ngIf="!element.last" class="form-control" [(ngModel)]="attributeList[i].text" placeholder="Text"></textarea>
 			</md-cell>
 		</ng-container>
 		<ng-container mdColumnDef="action">
-			<md-header-cell *mdHeaderCellDef> </md-header-cell>
-			<md-cell *mdCellDef="let element">
-				<md-icon *ngIf="element.isLast" (click)="addAttribute()">add_circle</md-icon>
-				<md-icon *ngIf="!element.isLast" (click)="removeAttribute(element.index)">remove_circle</md-icon>
+			<md-header-cell *mdHeaderCellDef [ngStyle]="{'flex': 'none', 'width': '60px'}"> </md-header-cell>
+			<md-cell *mdCellDef="let element; let i = index" [ngStyle]="{'flex': 'none', 'width': '60px'}">
+				<button md-button type="button" (click)="addRow()" class="action-button" *ngIf="element.last" [ngStyle]="{'background': '#f56b6b'}">
+					<md-icon [ngStyle]="{'color': '#fff'}">add_circle</md-icon>
+				</button>
+				<button md-button type="button" (click)="removeRow(i)" class="action-button" *ngIf="!element.last" [ngStyle]="{'background': '#1e91cf'}">
+					<md-icon [ngStyle]="{'color': '#fff'}">remove_circle</md-icon>
+				</button>
 			</md-cell>
 		</ng-container>
 
