Product recurring tab

--- a/src/app/back/admin/pages/products/products-form.component.html
+++ b/src/app/back/admin/pages/products/products-form.component.html
@@ -22,5 +22,13 @@
 		<md-tab label="Attribute">
 			<admin-product-tab-attribute> </admin-product-tab-attribute>
 		</md-tab>
+
+		<md-tab label="Option">
+			<admin-product-tab-option> </admin-product-tab-option>
+		</md-tab>
+
+		<md-tab label="Recurring">
+			<admin-product-tab-recurring> </admin-product-tab-recurring>
+		</md-tab>
 	</md-tab-group>
 </form>
