Product discount tab

--- a/src/app/back/admin/pages/products/products-form.component.html
+++ b/src/app/back/admin/pages/products/products-form.component.html
@@ -30,5 +30,9 @@
 		<md-tab label="Recurring">
 			<admin-product-tab-recurring> </admin-product-tab-recurring>
 		</md-tab>
+
+		<md-tab label="Discount">
+			<admin-product-tab-discount> </admin-product-tab-discount>
+		</md-tab>
 	</md-tab-group>
 </form>
