Product special tab

--- a/src/app/back/admin/pages/products/products-form.component.html
+++ b/src/app/back/admin/pages/products/products-form.component.html
@@ -34,5 +34,9 @@
 		<md-tab label="Discount">
 			<admin-product-tab-discount> </admin-product-tab-discount>
 		</md-tab>
+
+		<md-tab label="Special">
+			<admin-product-tab-special> </admin-product-tab-special>
+		</md-tab>
 	</md-tab-group>
 </form>
