Product image tab

--- a/src/app/back/admin/pages/products/products-form.component.html
+++ b/src/app/back/admin/pages/products/products-form.component.html
@@ -38,5 +38,9 @@
 		<md-tab label="Special">
 			<admin-product-tab-special> </admin-product-tab-special>
 		</md-tab>
+
+		<md-tab label="Image">
+			<admin-product-tab-image> </admin-product-tab-image>
+		</md-tab>
 	</md-tab-group>
 </form>
