Product reward points tab

--- a/src/app/back/admin/pages/products/products-form.component.html
+++ b/src/app/back/admin/pages/products/products-form.component.html
@@ -42,5 +42,9 @@
 		<md-tab label="Image">
 			<admin-product-tab-image> </admin-product-tab-image>
 		</md-tab>
+
+		<md-tab label="Reward Points">
+			<admin-product-tab-reward-points> </admin-product-tab-reward-points>
+		</md-tab>
 	</md-tab-group>
 </form>
