Product design tab

--- a/src/app/back/admin/pages/products/products-form.component.html
+++ b/src/app/back/admin/pages/products/products-form.component.html
@@ -46,5 +46,9 @@
 		<md-tab label="Reward Points">
 			<admin-product-tab-reward-points> </admin-product-tab-reward-points>
 		</md-tab>
+
+		<md-tab label="Design">
+			<admin-product-tab-design> </admin-product-tab-design>
+		</md-tab>
 	</md-tab-group>
 </form>
