--- a/src/app/front/pages/store/store.component.html
+++ b/src/app/front/pages/store/store.component.html
@@ -17,6 +17,8 @@
 				<p> Pro sapientem hendrerit conclusionemque in, eam tation sigulls rationibus et. Nullam invenire eam cu. Duo et aetemo aliquid officiis. Vis te eloquentiam referrentur deferruisset, sea nullam allquip temporibus no. Qui cu euripidis peritinacia. Et nec error tritani. Duo cu consul admodum albucus, nisl deferruisset ut est. </p>
 			</div>
 		</div>
-		<app-product-grid> </app-product-grid>
+		<a [routerLink]="['/product']">
+			<app-product-grid> </app-product-grid>
+		</a>
 	</div>
 </div>
