--- a/src/app/back/buyer/buyer.component.html
+++ b/src/app/back/buyer/buyer.component.html
@@ -1,1 +1,6 @@
-<buyer-header> </buyer-header>
+<div class="buyer-wrapper" fxLayout="column">
+	<buyer-header> </buyer-header>
+	<div class="buyer-content">
+		<buyer-sidenav> </buyer-sidenav>
+	</div>
+</div>
