--- a/src/app/back/buyer/buyer.component.html
+++ b/src/app/back/buyer/buyer.component.html
@@ -1,6 +1,11 @@
 <div class="buyer-wrapper" fxLayout="column">
 	<buyer-header> </buyer-header>
-	<div class="buyer-content">
-		<buyer-sidenav> </buyer-sidenav>
+	<div class="content-wrapper" fxLayout="row">
+		<div class="sidenav-wrapper">
+			<buyer-sidenav> </buyer-sidenav>
+		</div>
+		<div class="content">
+			<router-outlet> </router-outlet>
+		</div>
 	</div>
 </div>
