Edit Account page

--- a/src/app/back/buyer/buyer.component.html
+++ b/src/app/back/buyer/buyer.component.html
@@ -2,7 +2,7 @@
 	<buyer-header> </buyer-header>
 	<div class="content-wrapper" fxLayout="row">
 		<div class="sidenav-wrapper">
-			<buyer-sidenav> </buyer-sidenav>
+			<buyer-sidenav [page_alias]="page_alias"> </buyer-sidenav>
 		</div>
 		<div class="content">
 			<router-outlet> </router-outlet>
