--- a/src/app/back/buyer/buyer.component.scss
+++ b/src/app/back/buyer/buyer.component.scss
@@ -1,18 +1,26 @@
-.buyer-wrapper {
-	height: 100%;
-}
+buyer {
 
-.content {
-	flex: 1;
-	padding: 30px;
-}
+	.btn-primary {
+		background: #229ac8;
+		color: #fff;
+	}
 
-.content-wrapper {
-	flex: 1;
-}
+	.buyer-wrapper {
+		height: 100%;
+	}
 
-.sidenav-wrapper {
-	height: 100%;
-    width: 240px;
-    background: #2f3a4c;	
+	.content {
+		flex: 1;
+		padding: 30px;
+	}
+
+	.content-wrapper {
+		flex: 1;
+	}
+
+	.sidenav-wrapper {
+		height: 100%;
+	    width: 240px;
+	    background: #2f3a4c;	
+	}	
 }
