--- a/src/app/back/buyer/pages/my-account/my-account.component.html
+++ b/src/app/back/buyer/pages/my-account/my-account.component.html
@@ -1,19 +1,19 @@
 <h3> My Account </h3>
-<a [routerLink]="['/buyer/edit-account']">  Edit your account information </a>
-<a [routerLink]="['/buyer/password']"> Change your password </a>
-<a [routerLink]="['/buyer/address-book']"> Modify your address book entities </a>
-<a [routerLink]="['/buyers/wish-list']"> Modify your wish list </a>
+<a [routerLink]="['/buyer/edit-account']">  Edit your account information </a> <br>
+<a [routerLink]="['/buyer/password']"> Change your password </a> <br>
+<a [routerLink]="['/buyer/address-book']"> Modify your address book entities </a> <br>
+<a [routerLink]="['/buyers/wish-list']"> Modify your wish list </a> <br>
 
 <h3> My Orders </h3>
-<a [routerLink]="['/buyers/order-history']"> View your order history </a>
-<a [routerLink]="['/buyers/downloads']"> Downloads </a>
-<a [routerLink]="['/buyers/reward-points']"> Your Reward Points </a>
-<a [routerLink]="['/buyers/returns']"> View your return requests </a>
-<a [routerLink]="['/buyers/transactions']"> Your transactions </a>
-<a [routerLink]="['/buyers/recurring-payments']"> Recurring payments </a>
+<a [routerLink]="['/buyers/order-history']"> View your order history </a> <br>
+<a [routerLink]="['/buyers/downloads']"> Downloads </a> <br>
+<a [routerLink]="['/buyers/reward-points']"> Your Reward Points </a> <br>
+<a [routerLink]="['/buyers/returns']"> View your return requests </a> <br>
+<a [routerLink]="['/buyers/transactions']"> Your transactions </a> <br>
+<a [routerLink]="['/buyers/recurring-payments']"> Recurring payments </a> <br>
 
 <h3> My Affiliate Account </h3>
-<a [routerLink]="['/buyers/affiliate-account']"> Register for an affiliate account </a>
+<a [routerLink]="['/buyers/affiliate-account']"> Register for an affiliate account </a> <br>
 
 <h3> Newsletter </h3>
-<a [routerLink]="['/buyers/newsletter']"> Subscribe / unsubscribe to newsletter </a>
+<a [routerLink]="['/buyers/newsletter']"> Subscribe / unsubscribe to newsletter </a> <br>
