Change password page

--- a/src/app/back/buyer/buyer.component.scss
+++ b/src/app/back/buyer/buyer.component.scss
@@ -18,6 +18,11 @@ buyer {
 		flex: 1;
 	}
 
+	.mat-form-field {
+		display: block;
+		width: 100%;
+	}
+
 	.sidenav-wrapper {
 		height: 100%;
 	    width: 240px;
