--- a/src/app/back/buyer/buyer.component.scss
+++ b/src/app/back/buyer/buyer.component.scss
@@ -1,5 +1,31 @@
 buyer {
 
+	a {
+		text-decoration: none !important;
+	}
+
+	.action-button {
+		border-radius: 5px;
+		padding: 0px 10px;
+	    min-width: initial;
+	    margin: 2px;
+	    color: #fff;
+	}
+
+	.action-button.delete-button {
+		background-color: #da4f49;
+	    background-image: linear-gradient(to bottom,#ee5f5b,#bd362f);
+	    background-repeat: repeat-x;
+	    border-color: #bd362f #bd362f #802420;
+	}
+
+	.action-button.edit-button {
+		background: #df5c39;
+		background-image: linear-gradient(to bottom,#e06342,#dc512c);
+	    background-repeat: repeat-x;
+	    border-color: #dc512c #dc512c #a2371a;
+	}
+
 	.btn-primary {
 		background: #229ac8;
 		color: #fff;
@@ -19,6 +45,11 @@ buyer {
 	}
 
 	.mat-form-field {
+		display: block;
+		width: 100%;
+	}
+
+	.mat-select {
 		display: block;
 		width: 100%;
 	}
