Downloads, address-book complete

--- a/src/app/back/buyer/buyer.component.scss
+++ b/src/app/back/buyer/buyer.component.scss
@@ -54,6 +54,10 @@ buyer {
 		width: 100%;
 	}
 
+	.mat-table {
+		border: 1px solid #ddd;
+	}
+
 	.sidenav-wrapper {
 		height: 100%;
 	    width: 240px;
