Dashboard, profile pages complete

--- a/src/app/back/seller/partials/sidenav/sidenav.component.html
+++ b/src/app/back/seller/partials/sidenav/sidenav.component.html
@@ -9,7 +9,7 @@
 	</div>
 	<md-list>
 		<md-list-item *ngFor="let item of listItems" [class.selected]="item.link == page_alias">
-			<a [routerLink]="['/buyer/' + item.link]" class="full-size">
+			<a [routerLink]="['/seller/' + item.link]" class="full-size">
 				<button md-button class="full-height menu-button" (click)="toggleMenuItem($event)">
 					<p class="button-content inline" [ngStyle]="{'flex': '1'}">
 						{{ item.text }}
