--- a/src/app/back/seller/pages/profile/profile.component.html
+++ b/src/app/back/seller/pages/profile/profile.component.html
@@ -52,17 +52,7 @@
 
 			<div class="select-logo">
 				<div> Select Logo </div>
-				<div class="image" [ngStyle]="{'margin-bottom': '20px'}">
-					<img width="100" height="100" class="logo-image" src="http://www.sharejesusgeneva.com/image/cache/no_image-100x100.png" (click)="togglePopover()">
-					<div class="popover hidden" role="tooltip">
-						<div class="popover-arrow"> </div>
-						<div class="popover-content">
-							<input type="file" id="imgInput" (change)="readURL($event)" style="display:none" accept="image/*"/> 
-							<button md-button class="action-button" [ngStyle]="{'background': 'rgb(30, 145, 207)'}" (click)="uploadImage()"> <md-icon>create</md-icon> </button>
-							<button md-button class="action-button" [ngStyle]="{'background': 'rgb(245, 107, 107)'}" (click)="removeImage()"> <md-icon>delete</md-icon> </button>
-						</div>
-					</div>
-				</div>
+				<image-selector> </image-selector>
 			</div>
 		</div>
 
