--- a/src/app/back/seller/seller.component.scss
+++ b/src/app/back/seller/seller.component.scss
@@ -44,6 +44,23 @@ seller {
 		flex: 1;
 	}
 
+	.mat-form-field, .mat-input, .mat-select {
+		width: 100%;
+	}
+
+	.mat-input-element {
+	    height: 22px;
+	}
+
+	.mat-input-infix {
+		border-top: 16px solid transparent;
+    	padding: 4.5px 0px;
+	}
+
+	.mat-select {
+		margin-bottom: 17.5px;
+	}
+
 	.mat-form-field {
 		display: block;
 		width: 100%;
@@ -62,5 +79,19 @@ seller {
 		height: 100%;
 	    width: 240px;
 	    background: #01D8B6;	
-	}	
+	}
+
+	textarea {
+		width: 100%;
+		height: 100px;
+		margin-top: 10px;
+	}
+
+	.textarea {
+		margin-top: 16px;
+
+		div {
+			color: rgba(0, 0, 0, 0.54);
+		}
+	}
 }
